--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.username=postgres
+spring.datasource.password=testpassword
+#spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.defer-datasource-initialization=false
+spring.sql.init.mode=never
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.defer-datasource-initialization=true
-#spring.jpa.hibernate.ddl-auto=none
+version=${envVersionNumber}
+
+
