Add test integration

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,11 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-/src/main/resources/application-test.properties
+/src/test/resources/application.properties
 /src/main/resources/application.properties
+/src/test/resources/data.sql
+/src/test/resources/schema.sql
+/src/test/resources/drop.sql
 
 ### VS Code ###
 .vscode/
