--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma_springbootdb
 spring.datasource.username=postgres
 spring.datasource.password=testpassword
 #spring.datasource.initialization-mode=never
 spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.defer-datasource-initialization=false
+#spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=never
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
