--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pma_springbootdb
-spring.datasource.username=postgres
-spring.datasource.password=testpassword
-#spring.datasource.initialization-mode=never
+spring.datasource.url=${jdbcurl}    #jdbc:postgresql://localhost:5432/pmadb
+spring.datasource.username=${dbuser}         #pmauser
+spring.datasource.password=${dbpassword}             pmauser123
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=never
