--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ build/
 #/src/test/resources/application.properties
 #/src/main/resources/application.properties
 /src/test/resources/
+Dockerfile
 
 ### VS Code ###
 .vscode/
