Add defferent profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-spring.datasource.url=${jdbcurl}    #jdbc:postgresql://localhost:5432/pmadb
-spring.datasource.username=${dbuser}         #pmauser
-spring.datasource.password=${dbpassword}             pmauser123
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=never
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=true
-spring.thymeleaf.cache=false
-version=${envVersionNumber}
-
-
+spring.profiles.active=dev
