Add AOP logging

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,24 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pmadb
-spring.datasource.username=pmauser
-spring.datasource.password=pmauser123
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=never
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-version=dev
+spring.datasource.url=jdbc:h2:mem:testdb
+jdbc.url=jdbc:h2:mem:testdb;MODE=PosetgreSQL;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=none
+version="0.0.0"
+logging.level.com.msbeigi.pma=DEBUG
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/pmadb
+#spring.datasource.username=pmauser
+#spring.datasource.password=pmauser123
+#spring.jpa.hibernate.ddl-auto=none
+##spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=never
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.show-sql=true
+#spring.thymeleaf.cache=false
+#version=dev
 
 
