Add logging config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.defer-datasource-initialization=true
 #spring.jpa.hibernate.ddl-auto=none
 version="0.0.0"
+logging.level.root=WARN
 logging.level.com.msbeigi.pma=DEBUG
+logging.level.org.springframework=INFO
+logging.file.name=app.log
+logging.pattern.dateformat=yy-MM-dd hh:mm:ss
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/pmadb
 #spring.datasource.username=pmauser
